--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </body>
 <script>
 setInterval(function(){
+  try {
 c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000)+(parseInt(document.head.getElementById("o").value)*3600000))-Date.now()).toString();
 document.body.innerHTML=c+" total milliseconds to Christmas 2018<br>"+Math.floor(parseInt(c)/(3600000*24)).toString()+
 " days "+new Date(parseInt(c)).getHours()+" hours "+
 new Date(parseInt(c)).getMinutes()+" minutes "+
 new Date(parseInt(c)).getSeconds()+" seconds "+
 new Date(parseInt(c)).getMilliseconds()+" milliseconds"
+    } catch(e){ document.body.innerHTML=e }
 },1)
 </script>
 </html>
