--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head style="display:block"><style>body{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
-<input type="number" id="o" value="0"></head>
+<input type="number" id="o" value="0"></input></head>
 <body>
 
 </body>
 <script>
 setInterval(function(){
   try {
-c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000)+(parseInt(document.head.getElementById("o").value)*3600000))-Date.now()).toString();
+c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000)/*+(parseInt(document.getElementById("o").value)*3600000))*/-Date.now()).toString();
 document.body.innerHTML=c+" total milliseconds to Christmas 2018<br>"+Math.floor(parseInt(c)/(3600000*24)).toString()+
 " days "+new Date(parseInt(c)).getHours()+" hours "+
 new Date(parseInt(c)).getMinutes()+" minutes "+
