--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head style="display:block"><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
 <input type="number" id="o" value="0"></input></head>
-<body>
+<body style="display:block">
 
 </body>
 <script>
@@ -15,6 +15,6 @@ new Date(parseInt(c)).getMinutes()+" minutes "+
 new Date(parseInt(c)).getSeconds()+" seconds "+
 new Date(parseInt(c)).getMilliseconds()+" milliseconds"
    // } catch(e){ document.body.innerHTML=e }
-},100)
+},1)
 </script>
 </html>
