--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head style="display:block"><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
+<head style="display:none"><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
 <input type="number" id="o" value="0"></input></head>
-<body style="display:block">
+<body>
 
 </body>
 <script>
