--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head style="display:block"><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
-<input type="number" id="o" value="0"></input></head>
+<head><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
+<**<input type="number" id="o" value="0"></input></head>**>
 <body>
 
 </body>
