--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
-<**<input type="number" id="o" value="0"></input></head>**>
+<head>
 <body>
 
 </body>
 <script>
-setInterval(function(){c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000)-Date.now()).toString();document.body.innerHTML=c+" total milliseconds to Christmas 2018<br>"+Math.floor(c/(3600000*24)).toString()+" days "+new Date(parseInt(c)).getHours()+" hours "+new Date(parseInt(c)).getMinutes()+" minutes "+new Date(parseInt(c)).getSeconds()+" seconds "+new Date(parseInt(c)).getMilliseconds()+" milliseconds"
+setInterval(function(){c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000))-Date.now()).toString();document.body.innerHTML=c+" total milliseconds to Christmas 2018<br>"+Math.floor(c/(3600000*24)).toString()+" days "+new Date(parseInt(c)).getHours()+" hours "+new Date(parseInt(c)).getMinutes()+" minutes "+new Date(parseInt(c)).getSeconds()+" seconds "+new Date(parseInt(c)).getMilliseconds()+" milliseconds"
 },1)
 </script>
 </html>
