--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,15 @@
 <head><style>*{font-family:sans-serif;font-size:40px;font-weight:200;}</style>
 <head>
 <body>
-<span></span>
+<span></span><br>
   <input type="number" id="o" value="0"></input></head>
 </body>
 <script>
-setInterval(function(){c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000))-Date.now()).toString();document.body.children[0].innerHTML=c+" total milliseconds to Christmas 2018<br>"+Math.floor(c/(3600000*24)).toString()+" days "+new Date(parseInt(c)).getHours()+" hours "+new Date(parseInt(c)).getMinutes()+" minutes "+new Date(parseInt(c)).getSeconds()+" seconds "+new Date(parseInt(c)).getMilliseconds()+" milliseconds"
-},1)
+setInterval(function(){c=((((86400000*((365)*49)+86400000+86400000+86400000+86400000+86400000+86400000)-68400000)+(parseInt(document.getElementById("o").value)*3600000))-Date.now()).toString();
+document.body.children[0].innerHTML=c+" total milliseconds to Christmas 2018<br>"+Math.floor(parseInt(c)/(3600000*24)).toString()+
+" days "+new Date(parseInt(c)).getHours()+" hours "+
+new Date(parseInt(c)).getMinutes()+" minutes "+
+new Date(parseInt(c)).getSeconds()+" seconds "+
+new Date(parseInt(c)).getMilliseconds()+" milliseconds},1)
 </script>
 </html>
