--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,6 @@ document.body.children[0].innerHTML=c+" total milliseconds to Christmas 2018<br>
 " days "+new Date(parseInt(c)).getHours()+" hours "+
 new Date(parseInt(c)).getMinutes()+" minutes "+
 new Date(parseInt(c)).getSeconds()+" seconds "+
-new Date(parseInt(c)).getMilliseconds()+" milliseconds},1)
+new Date(parseInt(c)).getMilliseconds()+" milliseconds"},1)
 </script>
 </html>
